# ComputerMonitor

./: .gitignore  CMakeLists.txt
doc/: CMakeLists.txt  Doxyfile.in  TODO
doc/UML/: diagram_klas.dia  diagram_klas_gui.dia  diagram_klas_system_monitoring_lib.dia  diagram_przypadkow_uzycia.dia
doc/april_summarize/: summation_april.lof  summation_april.lot  summation_april.tex  summation_april.toc  title_page.tex
doc/design_assumptions/: desing_assumptions.tex
doc/june_summarize/: may_summarize.lof  may_summarize.lot  may_summarize.tex  may_summarize.toc  title_page.tex
doc/may_summarize/: may_summarize.lof  may_summarize.lot  may_summarize.tex  may_summarize.toc  title_page.tex
doc/uml/: diagram_klas.notation  diagram_klas.uml
prj/: CMakeLists.txt
prj/dox/: main_page.dox
prj/inc/: ComputerMonitorMainWindow.hpp
prj/inc/data/: ComputerInfoDataContainerWrapper.hpp
prj/inc/delegates/: UsageDelegate.hpp
prj/inc/gui/: AboutDialog.hpp  ComputerMonitorMainWindow.hpp  ComputerMonitorMainWindowBase.hpp  ComputerMonitorMainWindowSend.hpp  ComputerMonitorWidgetBase.hpp  DataSendWidget.hpp  ModeSelectionDialog.hpp  ProcessesWidget.hpp  ProcessorWidget.hpp  RadialIndicator.hpp  RamWidget.hpp  ReceiveInfoWidget.hpp  SensorsWidget.hpp
prj/inc/models/: AllProcessesModel.hpp  AllSensorsModel.hpp  ProcessorModel.hpp
prj/lib/: CMakeLists.txt
prj/lib/QCustomPlot/: CMakeLists.txt
prj/lib/SystemMonitoringLib/: CMakeLists.txt
prj/lib/SystemMonitoringLib/inc/: AllProcessesInfo.hpp  ComputerInfo.hpp  ComputerInfoDataContainer.hpp  DataBuffer.hpp  HardwareInfo.hpp  Info.hpp  ProcessInfo.hpp  ProcessorInfo.hpp  RamInfo.hpp  SensorInfo.hpp  SensorsVector.hpp
prj/lib/SystemMonitoringLib/src/: AllProcessesInfo.cpp  ComputerInfo.cpp  ComputerInfoDataContainer.cpp  Info.cpp  ProcessInfo.cpp  ProcessorInfo.cpp  RamInfo.cpp  SensorInfo.cpp  SensorsVector.cpp
prj/lib/SystemMonitoringNetworkLib/: CMakeLists.txt
prj/lib/SystemMonitoringNetworkLib/src/: SystemMonitoringReceiver.cpp
prj/qml/: ComputerMonitorMainWindow.qml
prj/rsrc/: AppResources.qrc  QmlCode.qrc
prj/rsrc/qml/: ComputerMonitorMainWindow.qml
prj/src/: main.cpp
prj/src/data/: ComputerInfoDataContainerWrapper.cpp
prj/src/delegates/: UsageDelegate.cpp
prj/src/gui/: AboutDialog.cpp  ComputerMonitorMainWindow.cpp  ComputerMonitorMainWindowBase.cpp  ComputerMonitorMainWindowSend.cpp  ComputerMonitorWidgetBase.cpp  DataSendWidget.cpp  ModeSelectionDialog.cpp  ProcessesWidget.cpp  ProcessorWidget.cpp  RadialIndicator.cpp  RamWidget.cpp  ReceiveInfoWidget.cpp  SensorsWidget.cpp
prj/src/models/: AllProcessesModel.cpp  AllSensorsModel.cpp  ProcessorModel.cpp
prj/ui/: AboutDialog.ui  ComputerMonitorMainWindowSend.ui  ComputerMonitorMainWindowUi.ui  DataSendWidget.ui  ModeSelectionDialog.ui  ProcessesWidget.ui  ProcessorWidget.ui  RamWidget.ui  ReceiveInfoWidget.ui  SendInfoWidget.ui  SensorsWidget.ui
